--- a/css/style.css
+++ b/css/style.css
@@ -8,7 +8,15 @@
 
 #container
 {
+    display: flex ;
     min-height: 100vh;
     background-color: rgba(68, 117, 136, 0.548);
+}
+
+.card
+{
+    background-color: white;
+    width: 300px;
+    border-radius: 10px;
 }
 
