--- a/css/style.css
+++ b/css/style.css
@@ -11,6 +11,7 @@
     display: flex ;
     min-height: 100vh;
     background-color: rgba(68, 117, 136, 0.548);
+    justify-content: center;
 }
 
 .card
@@ -18,6 +19,7 @@
     background-color: white;
     width: 300px;
     border-radius: 10px;
+    border: 1px solid black;
 }
 
 .card-header 
@@ -32,6 +34,17 @@
     height: 200px;
     object-fit: cover;
     filter: grayscale(1);
+    transition: 2s;
 
+}
+
+.card-header img:hover
+{
+    filter: grayscale(0);
+}
+
+.card-text
+{
+  padding: 10px 20px 30px 15px ;  
 }
 
