--- a/css/style.css
+++ b/css/style.css
@@ -11,7 +11,7 @@
     display: flex ;
     min-height: 100vh;
     background-color: rgba(68, 117, 136, 0.548);
-    justify-content: center;
+    justify-content: center; 
     align-items: center;
     gap: 20px;
 }
@@ -62,5 +62,6 @@
 .card-text
 {
     font-size: 14px;
+    color: rgb(147, 147, 147);
 }
 
