--- a/css/style.css
+++ b/css/style.css
@@ -21,6 +21,7 @@
     background-color: white;
     width: 300px;
     border-radius: 10px;
+    box-shadow: rgba(50, 50, 93, 0.25) 0px 30px 60px -12px inset, rgba(0, 0, 0, 0.3) 0px 18px 36px -18px inset;
     
 }
 
@@ -39,6 +40,7 @@
     filter: grayscale(1);
     transition: 2s;
     border-radius: 10px 10px 0 0;
+    
 
 
 }
