add google fonts

--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,4 @@
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;300;400;500;600;700;800;900&display=swap');
 *
 {
     margin: 0;
@@ -59,11 +60,13 @@
 {
     font-size: 25px;
     margin-bottom: 10px;
+    color: black ;
 }
 
-.card-text
+.card-text p
 {
     font-size: 14px;
     color: rgb(147, 147, 147);
+    font-weight: 300px ;
 }
 
