add class heart

--- a/css/style.css
+++ b/css/style.css
@@ -24,11 +24,19 @@
     border-radius: 10px;
     box-shadow: rgba(50, 50, 93, 0.25) 0px 30px 60px -12px inset, rgba(0, 0, 0, 0.3) 0px 18px 36px -18px inset;
     transition: 0.5s;
+    overflow: hidden;*/
 }
 
-.card:hover
+/*.card:hover
 {
     transform: translateY(-15px);
+}*/
+
+.card:hover .coeur
+{
+    left: 0;
+    transition: 2s;
+
 }
 
 .card-header 
@@ -78,13 +86,17 @@
 
 .coeur
 {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    color: #fff;
+    font-size: 20px;
     width: 50px;
     height: 50px;
     background-color: rgba(237, 53, 96);
     position: absolute;
     top: 0;
-    left: 0;
-    border-radius: 10px 0 0 0;
-    
+    left: -50px;
+    border-radius: 10px 0 0 0;   
 
 }
